--- a/PythonBasic.ipynb
+++ b/PythonBasic.ipynb
@@ -1453,7 +1453,7 @@
    "source": [
     "# Dictionary\n",
     "\n",
-    "Like structure in C. It has key value pairs"
+    "Like classess in Javascript. It has key value pairs"
    ]
   },
   {
